--- a/app/views/grant_submissions/submissions/reviews/_review_header.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/_review_header.html.haml
@@ -9,7 +9,8 @@
     .grid-x.cell.small-12.medium-10
       = link_to @submission.title, grant_submission_path(@grant, @submission)
     .grid-x.cell.small-12.medium-2
-      %strong Applicants
+      %strong
+        = 'Applicant'.pluralize(@submission.applicants.count) + ':'
     .grid-x.cell.small-12.medium-10
       = full_name_list(@submission.applicants)
     .grid-x.cell.small-12.medium-2
