--- a/app/views/grant_creator_requests/index.html.haml
+++ b/app/views/grant_creator_requests/index.html.haml
@@ -20,6 +20,6 @@
           %td
             = full_name(request.requester)
           %td
-            = request.created_at
+            = time_tag(datetime: request.created_at)
           %td
             = link_to 'Review and Approve', grant_creator_request_review_path(request)
