Task/use html time element (#841)
* Add rails date and time formats for display

* Remove submission_period method from decorator

* Update dates to use Rails' time_tag helper method

* Use HTML time element for dates

--- a/app/views/grant_creator_requests/index.html.haml
+++ b/app/views/grant_creator_requests/index.html.haml
@@ -20,6 +20,6 @@
           %td
             = full_name(request.requester)
           %td
-            = request.created_at
+            = time_tag(request.created_at, request.created_at.to_formatted_s(:default))
           %td
             = link_to 'Review and Approve', grant_creator_request_review_path(request)
