--- a/app/views/profiles/panels/index.html.haml
+++ b/app/views/profiles/panels/index.html.haml
@@ -25,14 +25,20 @@
   %table
     %thead
       %tr
-        %th= sort_link(@q, :name, 'Grant', {}, {title: 'Sort on Grant Title'})
-        %th= sort_link(@q, :review_close_date, {}, {title: 'Sort on Review Close'})
-        %th= sort_link(@q, 'panel_start_datetime', 'Panel Start',{}, {title: 'Sort on Panel Start'})
+        %th
+          = sort_link(@q, :name, 'Grant', {}, { title: 'Sort on Grant Title' })
+        %th
+          = sort_link(@q, :review_close_date, {}, { title: 'Sort on Review Close' })
+        %th
+          = sort_link(@q, 'panel_start_datetime', 'Panel Start',{}, { title: 'Sort on Panel Start' })
     %tbody
       - @grants.each do |grant|
         %tr.panel
-          %td= link_to grant.name, grant_panel_path(grant)
-          %td= grant.review_close_date
-          %td= grant.panel.start_datetime || 'Not Scheduled'
+          %td
+            = link_to grant.name, grant_panel_path(grant)
+          %td
+            = time_tag(grant.review_close_date.end_of_day, grant.review_close_date.end_of_day.to_formatted_s(:date_only))
+          %td
+            = grant.panel.start_datetime.present? ? time_tag(grant.panel.start_datetime, grant.panel.start_datetime.to_formatted_s(:default)) : 'Not Scheduled'
 
   != pagy_foundation_nav(@pagy_a)
