--- a/app/views/profiles/reviews/index.html.haml
+++ b/app/views/profiles/reviews/index.html.haml
@@ -26,17 +26,17 @@
     %thead
       %tr
         %th
-          = sort_link(@q, :overall_impact_score, 'Completed',{}, {title: 'Sort on Completed'})
+          = sort_link(@q, :overall_impact_score, 'Completed',{}, { title: 'Sort on Completed' })
         %th
-          = sort_link(@q, :grant_name, 'Grant',{}, {title: 'Sort on Grant'})
+          = sort_link(@q, :grant_name, 'Grant',{}, { title: 'Sort on Grant' })
         %th
-          = sort_link(@q, :applicant_last_name, 'Applicant',{}, {title: 'Sort on Applicant'})
+          = sort_link(@q, :applicant_last_name, 'Applicant',{}, { title: 'Sort on Applicant' })
         %th
-          = sort_link(@q, :submission_title, 'Submission Title',{}, {title: 'Sort on Submission Title'})
+          = sort_link(@q, :submission_title, 'Submission Title',{}, { title: 'Sort on Submission Title' })
         %th
-          = sort_link(@q, :created_at, 'Assigned On',{}, {title: 'Sort on Assigned Date'})
+          = sort_link(@q, :created_at, 'Assigned On',{}, { title: 'Sort on Assigned Date' })
         %th
-          = sort_link(@q, :grant_review_close_date, 'Due by Date',{}, {title: 'Sort on Due Date'})
+          = sort_link(@q, :grant_review_close_date, 'Due by Date',{}, { title: 'Sort on Due Date' })
 
     %tbody
       - @reviews.each do |review|
@@ -53,8 +53,8 @@
           %td
             = link_to_if grant_published, truncate(review.submission.title), grant_submission_path(review.grant, review.submission)
           %td
-            = date_mmddyyyy(review.created_at)
+            = time_tag(review.created_at, review.created_at.to_formatted_s(:default))
           %td
-            = review.grant.review_close_date
+            = time_tag(review.grant.review_close_date.end_of_day, review.grant.review_close_date.to_formatted_s(:default))
 
   != pagy_foundation_nav(@pagy)
