--- a/app/views/grant_submissions/submissions/submission_applicants/index.html.haml
+++ b/app/views/grant_submissions/submissions/submission_applicants/index.html.haml
@@ -20,13 +20,14 @@
         Applicants
 
 .grid-x
-  Add Applicant by Email Address.
-  %div{ style: 'display: inline-block' }
-    = form_for :grant_submission_submission_applicant, url: grant_submission_submission_applicants_path(@grant, @submission) do |f|
-      .input-group
-        = f.email_field :applicant_email, placeholder: 'Email', class: 'input-group-field'
-        .input-group-button
-          = f.submit 'Look Up', class: 'button small'
+  .small-12.cell
+    Add Applicant by Email Address.
+    %div{ style: 'display: inline-block' }
+      = form_for :grant_submission_submission_applicant, url: grant_submission_submission_applicants_path(@grant, @submission) do |f|
+        .input-group
+          = f.email_field :applicant_email, placeholder: 'Email', class: 'input-group-field'
+          .input-group-button
+            = f.submit 'Look Up', class: 'button small'
 
 .nested-fields
   .field
