--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -6,6 +6,25 @@
 
 %ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item{"data-accordion-item" => ""}
+    %a.accordion-title{:href => "#"} 1.12 (August 1, 2021)
+    .accordion-content{"data-tab-content" => ""}
+      %p
+        %ul
+          %li
+            Upgrade rails to 6.1.4.
+            #{github_issue_link(issue: 845)}
+          %li
+            Upgrade rails to 3.0.2.
+            #{github_issue_link(issue: 845)}
+          %li
+            Update capistrano lock.
+            #{github_issue_link(issue: 845)}
+          %li
+            Update capistrano lock.
+            #{github_issue_link(issue: 841)}
+
+%ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
+  %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.11 (June 23, 2021)
     .accordion-content{"data-tab-content" => ""}
       %p
