--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -14,13 +14,13 @@
             Upgrade rails to 6.1.4.
             #{github_issue_link(issue: 845)}
           %li
-            Upgrade rails to 3.0.2.
+            Upgrade ruby to 3.0.2.
             #{github_issue_link(issue: 845)}
           %li
             Update capistrano lock.
             #{github_issue_link(issue: 845)}
           %li
-            Update capistrano lock.
+            Use html time element.
             #{github_issue_link(issue: 841)}
 
 %ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
