Changes based on PR comments. #848

--- a/app/views/applicant_mailer/unassignment.html.haml
+++ b/app/views/applicant_mailer/unassignment.html.haml
@@ -2,8 +2,8 @@
   Dear #{full_name(@applicant)},
 
 %p
-  You have been unassigned as an applicant on the submission
-  = surround '"', ',"' do
+  #{full_name(@current_user)} has removed you as an applicant on the submission
+  = surround ', "', ',"' do
     = @submission.title
   an application to the grant
   = succeed '.' do
