--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -32,7 +32,7 @@
             Add ability to add aditional applicants on submission edit.
             #{github_issue_link(issue: 249)}
           %li
-            Add applicant notification emails on adding applicants.
+            Add notification emails when adding or removing applicants.
             #{github_issue_link(issue: 848)}
 
 %ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
