--- a/app/views/applicant_mailer/assignment.html.haml
+++ b/app/views/applicant_mailer/assignment.html.haml
@@ -2,9 +2,8 @@
   Dear #{full_name(@applicant)},
 
 %p
-  You have been assigned as an applicant on the submission
-  = surround '"', ',"' do
-    = @title
+  #{full_name(@current_user)} has added you as an applicant on the submission
+  = surround ', "', ',"' do
     = link_to @title, grant_submission_url(@grant, @submission)
   an application to the grant
   = succeed '.' do
