--- a/app/views/grant_submissions/forms/_title_placeholder_field.html.haml
+++ b/app/views/grant_submissions/forms/_title_placeholder_field.html.haml
@@ -8,7 +8,4 @@
     = text_field :project_title, '', placeholder: 'Project Title field is required', disabled: true, aria: { 'described-by': 'projectTitleDateHelp' }
 
     %p#projectTitleDateHelp.help-text
-      This field is required for all submissions and may not be deleted.asdf
-
-
-
+      This field is required for all submissions and may not be deleted.
