Add deadline to mailer body and cc the assigner

--- a/app/views/reviewer_mailer/assignment.html.haml
+++ b/app/views/reviewer_mailer/assignment.html.haml
@@ -12,6 +12,9 @@
   for #{@grant.name}.
 
 %p
+  The deadline for your review is #{@grant.review_close_date.strftime("%B %e, %Y")}.
+
+%p
   By clicking the link above you can review or opt out of reviewing.
 
 %p
