Revert "Tasks/specs for saml user logout 696"

--- a/app/views/login/_login.html.haml
+++ b/app/views/login/_login.html.haml
@@ -5,7 +5,7 @@
 .cell
   .instructions.registered
     With your institutional account
-  = link_to "With #{COMPETITIONS_CONFIG[:devise][:saml_authenticatable][:idp_entity_name]}",  new_saml_user_session_path, class: 'saml-log-in button expanded', id: 'saml_login_link_button'
+  = link_to "With #{COMPETITIONS_CONFIG[:devise][:saml_authenticatable][:idp_entity_name]}",  new_saml_user_session_path, class: 'saml-log-in button expanded'
 .cell.or
   OR
 .cell
