--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -12,8 +12,8 @@
 @include foundation-global-styles;
 @include foundation-xy-grid-classes;
 // @include foundation-grid;
-// @include foundation-flex-grid;
-// @include foundation-flex-classes;
+@include foundation-flex-grid;
+@include foundation-flex-classes;
 @include foundation-typography;
 @include foundation-forms;
 @include foundation-button;
