--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,9 +9,8 @@
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = stylesheet_link_tag     wicked_pdf_asset_base64("pdf")
-    / = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
-    = turbo_include_tags
+    / = turbo_include_tags
 
 
   %body.grid-container
