--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,5 +18,6 @@
 @import "app";
 @import "foundation_and_overrides";
 @import "foundation-datepicker";
-@import "trix";
+@import "trix/dist/trix";
+@import "./actiontext.scss";
 @import "font-awesome";
