--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
       = title_tag_content(page_title: yield(:page_title))
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag    'application', media: 'all', "data-turbo-track": "reload", defer: true
     = stylesheet_link_tag     wicked_pdf_asset_base64("pdf")
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
 
