--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', "data-turbo-track": "reload", defer: true
-    = stylesheet_link_tag     wicked_pdf_asset_base64("pdf")
+    = wicked_pdf_stylesheet_link_tag "pdf"
     = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
 
 
