--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -17,3 +17,7 @@
     <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
   <% end %>
 </div>
+
+<div id="saml-user-link">
+  <%= link_to "Login with #{COMPETITIONS_CONFIG[:devise][:saml_authenticatable][:idp_entity_name]}", new_saml_user_session_path(resource_name) %><br />
+</div>
