--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -19,5 +19,5 @@
 </div>
 
 <div id="saml-user-link">
-  <%= link_to "Login with #{COMPETITIONS_CONFIG[:devise][:saml_authenticatable][:idp_entity_name]}", new_saml_user_session_path(resource_name) %><br />
+  <%= link_to "Login with your #{COMPETITIONS_CONFIG[:devise][:saml_authenticatable][:idp_entity_name]}", new_saml_user_session_path(resource_name) %><br />
 </div>
