Improve registered_user saml_email front end errors

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -53,6 +53,12 @@ header {
   }
 
   main {
+    .callout {
+      a {
+        text-decoration: underline;
+      }
+    }
+
     #submenu {
       background: none;
       display: flex;
