--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -5,7 +5,8 @@
   <% end %>
 
   <%- if controller_name != 'registrations' %>
-    New user? <%= link_to "Create an account", new_registration_path(resource_name) %><br />
+    <%= "New user (without #{COMPETITIONS_CONFIG[:devise][:saml_authenticatable][:idp_entity_name]})?"%>
+    <%= link_to "Create an account", new_registration_path(resource_name) %><br />
   <% end %>
 
   <%- if controller_name != 'passwords' && controller_name != 'registrations' %>
