--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -6,7 +6,17 @@
 
 %ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item{"data-accordion-item" => ""}
-    %a.accordion-title{:href => "#"} 1.15.1 (January 26, 2022)
+    %a.accordion-title{:href => "#"} 1.15.2 (February 4, 2022)
+    .accordion-content{"data-tab-content" => ""}
+      %p
+        %ul
+          %li
+            Add nil checks for error messaging.
+            #{github_issue_link(issue: 891)}
+
+%ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
+  %li.accordion-item{"data-accordion-item" => ""}
+    %a.accordion-title{:href => "#"} 1.15.1 (February 4, 2022)
     .accordion-content{"data-tab-content" => ""}
       %p
         %ul
