--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,7 +3,7 @@
     <div class="cell align-center-middle">
 
       <h3>Forgot your password?</h3>
-
+      <%= render "devise/shared/login_prepend_links" %>
       <div class="cell">
         <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
           <div id="fields">
@@ -18,7 +18,7 @@
           </div>
         <% end %>
 
-        <%= render "devise/shared/links" %>
+        <%= render "devise/shared/login_append_links" %>
       </div>
     </div>
   </div>
