Capitalize "Log In"

--- a/app/views/devise/menu/_login_items.html.haml
+++ b/app/views/devise/menu/_login_items.html.haml
@@ -24,4 +24,4 @@
           = link_to 'Log Out', destroy_saml_user_session_path, method: :delete
 - else
   %li
-    = link_to 'Log in', login_index_path
+    = link_to 'Log In', login_index_path
