--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,3 +1,5 @@
+- user_is_signed_in = user_signed_in?
+
 !!!
 %html
   %head
@@ -12,11 +14,11 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
   %body.grid-container
-    = render 'layouts/header'
+    = render partial: 'layouts/header', locals: { user_is_signed_in: user_is_signed_in }
 
     #content.grid-x.grid-margin-x.grid-margin-y
       %main.cell{ class: controller_name }
-        = render 'layouts/flash'
+        = render partial: 'layouts/flash', locals: { user_is_signed_in: user_is_signed_in }
 
         = yield
 
