Update the Publish Date `time_tag` for consistent date formatting

--- a/app/views/grants/_dates_card.html.haml
+++ b/app/views/grants/_dates_card.html.haml
@@ -6,7 +6,7 @@
       %dt
         Publish Date:
       %dd
-        = time_tag(grant.publish_date, grant.publish_date.to_formatted_s(:date_only))
+        = time_tag(grant.publish_date, grant.publish_date)
       %dt
         Submission Period:
       %dd
