--- a/app/views/home/_card.html.haml
+++ b/app/views/home/_card.html.haml
@@ -1,7 +1,7 @@
 .card{ id: "grant_#{grant.id}" }
   .card-section.grant-name
     %h4.name{ class: grant.name_length_class }
-      = link_to grant.name, grant_path(grant)
+      = link_to truncate(grant.name, length: 150), grant_path(grant)
   .card-section.grant-dates
     .dates
       .date
